Fix overflow-y scrolling on the form when opening datepicker

--- a/EmployeeManager/ClientApp/css/site.css
+++ b/EmployeeManager/ClientApp/css/site.css
@@ -11,7 +11,6 @@ body {
 
 .employee-list-body, .employee-form-body {
     height: 80%;
-    overflow-y: auto;
 }
 
 .employee-form-footer .update-employee-btn,
@@ -149,6 +148,10 @@ input:focus, input:active,
 
 .employee-list-item.selected .employee-name {
     color: #7bc367;
+}
+
+.employee-list-body {
+    overflow-y: auto;
 }
 
 /* Employee Form Styles */
